// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: can submit 1`] = `
<Modal
  contentLabel="header-label.name.JavaScript"
  onRequestClose={[MockFunction]}
  size="small"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        header-label.name.JavaScript
      </h2>
    </div>
    <div
      className="modal-body"
    >
      <MandatoryFieldsExplanation
        className="modal-field"
      />
      <div
        className="modal-field"
      >
        <label
          htmlFor="profile-name"
        >
          quality_profiles.new_name
          <MandatoryFieldMarker />
        </label>
        <input
          autoFocus={true}
          id="profile-name"
          maxLength={100}
          name="name"
          onChange={[Function]}
          required={true}
          size={50}
          type="text"
          value="new name"
        />
      </div>
    </div>
    <div
      className="modal-foot"
    >
      <SubmitButton
        disabled={false}
      >
        btn-label
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </div>
  </form>
</Modal>
`;

exports[`should render correctly: default 1`] = `
<Modal
  contentLabel="header-label.name.JavaScript"
  onRequestClose={[MockFunction]}
  size="small"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        header-label.name.JavaScript
      </h2>
    </div>
    <div
      className="modal-body"
    >
      <MandatoryFieldsExplanation
        className="modal-field"
      />
      <div
        className="modal-field"
      >
        <label
          htmlFor="profile-name"
        >
          quality_profiles.new_name
          <MandatoryFieldMarker />
        </label>
        <input
          autoFocus={true}
          id="profile-name"
          maxLength={100}
          name="name"
          onChange={[Function]}
          required={true}
          size={50}
          type="text"
          value="name"
        />
      </div>
    </div>
    <div
      className="modal-foot"
    >
      <SubmitButton
        disabled={true}
      >
        btn-label
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </div>
  </form>
</Modal>
`;

exports[`should render correctly: loading 1`] = `
<Modal
  contentLabel="header-label.name.JavaScript"
  onRequestClose={[MockFunction]}
  size="small"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        header-label.name.JavaScript
      </h2>
    </div>
    <div
      className="modal-body"
    >
      <MandatoryFieldsExplanation
        className="modal-field"
      />
      <div
        className="modal-field"
      >
        <label
          htmlFor="profile-name"
        >
          quality_profiles.new_name
          <MandatoryFieldMarker />
        </label>
        <input
          autoFocus={true}
          id="profile-name"
          maxLength={100}
          name="name"
          onChange={[Function]}
          required={true}
          size={50}
          type="text"
          value="name"
        />
      </div>
    </div>
    <div
      className="modal-foot"
    >
      <i
        className="spinner spacer-right"
      />
      <SubmitButton
        disabled={true}
      >
        btn-label
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </div>
  </form>
</Modal>
`;
